--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,15 +2,15 @@ body
 {
     color: #333;
     text-align: center;
-    font-family: Courier;
     font-size: 16px;
     margin: 0;
     padding: 0;
 }
+
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -19,4 +19,8 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+    padding: 1em;
 }
